# ReviewNet

./: .gitignore  README.md  ReviewNet.model  feature_extraction.py  metric_scores.txt  model_train.py  pyproject.toml
models/: GPTFeatureExtraction.py  ReviewNet.py  ReviewsDataset.py  __init__.py
