[tool.poetry]
name = "reviewnet"
version = "0.1.0"
description = ""
authors = ["lockiultra <lockiultra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
accelerate = "0.26.1"
transformers = "^4.36.2"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
